Minor design change to projectDetails description background color

--- a/styles/style.css
+++ b/styles/style.css
@@ -573,6 +573,10 @@ img.projectPictures {
   color: var(--color-text-dark);
 }
 
+.smallBlock {
+  background-color: var(--color-background-medium);
+}
+
 .projectDetailsTitle {
   font-size: x-large;
   padding: 0.75rem 0;
