Minor design change to projectDetails description background color

--- a/styles/style.css
+++ b/styles/style.css
@@ -573,7 +573,7 @@ img.projectPictures {
   color: var(--color-text-dark);
 }
 
-.smallBlock {
+#projectDescriptionBlock.smallBlock {
   background-color: var(--color-background-medium);
 }
 
